# gp-tag-ros2

./: .gitignore  LICENSE  README.md
gp_tag/: README.md  package.xml  setup.cfg  setup.py
gp_tag/config/camera/: generic.yaml  realsense.yaml
gp_tag/gp_tag/: annuli_decoder.py  data_decoder.py  finder_decoder.py  gp_tag_camera.py  gp_tag_node.py  gp_tag_realsense.py  gp_tag_viewer.py  sift_detector.py  spike_detector.py
gp_tag/launch/: gp_tag.launch.py
gp_tag/resource/: gp_tag
gp_tag_msgs/: CMakeLists.txt  package.xml
gp_tag_msgs/msg/: TagDetection.msg
